fix figcaption overflow

--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,10 @@ img {
 }
 
 figcaption {
-    align-self: center;
+    width: 90%;
     padding: 10px 0;
+    background: #ffffff;
+    text-align: left;
     font-weight: 100;
 }
 
@@ -187,7 +189,7 @@ figcaption {
 }
 
 .fullscreen:fullscreen figcaption {
-    color: #fff;
+    color: #ffffff;
 }
 
 .fullscreen:fullscreen .slider-container--indicator {
